@@ -1,6 +1,8 @@
 package io.mubel.sdk;
 
-import io.mubel.api.grpc.EventData;
+import io.mubel.api.grpc.v1.events.EntityReference;
+import io.mubel.api.grpc.v1.events.EventData;
+import io.mubel.api.grpc.v1.events.Operation;
 import io.mubel.sdk.execution.internal.InvocationContext;
 import io.mubel.sdk.fixtures.TestEvents;
 import org.junit.jupiter.api.Test;
@@ -20,8 +22,9 @@ class EventDataMapperTest {
     void roundtrip() {
         final var ctx = InvocationContext.create("streamId");
         final var eventA = new TestEvents.EventA("a value", 0);
-        final var result = eventDataMapper.toEventDataInput(ctx.streamId(), List.of(eventA), ctx::nextVersion);
-        assertThat(result)
+        final var operation = eventDataMapper.toAppendOp(ctx.streamId(), List.of(eventA), ctx::nextVersion);
+        final var appendOp = operation.getAppend();
+        assertThat(appendOp.getEventList())
                 .hasSize(1)
                 .first()
                 .satisfies(ed -> {
@@ -31,12 +34,12 @@ class EventDataMapperTest {
                     assertThat(ed.getData().toString("utf8")).isEqualTo("{\"value\":\"a value\",\"processedEventCount\":0}");
                 });
 
-        final var eventDataInput = result.get(0);
+        final var eventDataInput = appendOp.getEvent(0);
         final var eventData = EventData.newBuilder()
                 .setId(eventDataInput.getId())
                 .setType(eventDataInput.getType())
                 .setStreamId(eventDataInput.getStreamId())
-                .setVersion(eventDataInput.getVersion())
+                .setRevision(eventDataInput.getRevision())
                 .setData(eventDataInput.getData())
                 .build();
         final var mappedEvent = eventDataMapper.fromEventData(eventData);
@@ -54,19 +57,21 @@ class EventDataMapperTest {
                 .build();
 
         UUID streamId = UUID.randomUUID();
-        var events = eventDataMapper.toScheduledEvent(streamId.toString(), "some.target", handlerResult);
-        assertThat(events)
+        var reference = EntityReference.newBuilder()
+                .setId(streamId.toString())
+                .setType("some.target")
+                .build();
+        var deadlineOps = eventDataMapper.toDeadlineOps(reference, handlerResult.deadlines());
+        assertThat(deadlineOps)
                 .hasSize(1)
+                .map(Operation::getScheduleDeadline)
                 .first()
                 .satisfies(se -> {
-                    assertThat(se.getDeadline()).isTrue();
-                    assertThat(se.getTargetEntityId()).isEqualTo(streamId.toString());
-                    assertThat(se.getTargetType()).isEqualTo("some.target");
-                    assertThat(se.getId()).isEqualTo(deadline.id().toString());
-                    assertThat(se.getData().toString(Charset.defaultCharset())).isEqualTo("{\"key\":\"value\"}");
+                    assertThat(se.getDeadline().getTargetEntity()).isEqualTo(reference);
+                    assertThat(se.getDeadline().getData().toString(Charset.defaultCharset())).isEqualTo("{\"key\":\"value\"}");
                 });
 
-        var expiredDeadline = eventDataMapper.mapExpiredDeadline(events.get(0), Instant.now());
+        var expiredDeadline = eventDataMapper.mapExpiredDeadline(deadlineOps.getFirst().getScheduleDeadline().getDeadline(), Instant.now());
         assertThat(expiredDeadline.targetEntityId()).isEqualTo(streamId);
         assertThat(expiredDeadline.deadlineName()).isEqualTo(deadline.name());
         assertThat(expiredDeadline.hasAttribute("key")).isTrue();
